Prevented overflow scrolling caused by Starfield component

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,13 @@
+#page, aside#starfield {
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+}
+
 #page {
 	color: white;
 	text-align: center;
-  position: absolute;
-  top: 0; right: 0; bottom: 0; left: 0;
+}
+
+aside#starfield {
+  overflow: hidden;
 }
